fix IE fonts and alignment

--- a/src/less/import/game.less
+++ b/src/less/import/game.less
@@ -25,7 +25,7 @@
             .game-name {
                 color: #ffea00;
                 float: none;
-                font-family: Lobster, cursive;
+                font-family: Lobster, cursive, sans-serif;
                 font-size: 29px;
                 line-height: 48px;
                 text-align: center;
@@ -68,7 +68,7 @@
                 .game-description {
                     bottom: 0;
                     color: #fff;
-                    font-family: cursive,sans-serif;
+                    font-family: cursive, sans-serif;
                     overflow: hidden;
                     line-height: 18px;
                     height: 35px;
