--- a/src/less/import/main.less
+++ b/src/less/import/main.less
@@ -32,7 +32,7 @@ button{
 }
 
 .banner{
-    margin: 150px 50px 30px 50px;
+    margin: 128px 50px 30px 50px;
 
     &.in-game {
         margin-top: 1px;
@@ -88,7 +88,8 @@ header{
     .corner-toolbox-icons {
         position: absolute;
         top: 5px;
-        right: 5px;
+        right: 10px;
+        float: none;
         span {
             margin-right: 10px;
             color: white;
@@ -144,7 +145,7 @@ header{
             text-align: right;
             .username{
                 margin-top: 5px;
-                font-family: cursive;
+                font-family: cursive, sans-serif;
                 font-size: 18px;
                 color: white;
                 text-shadow: 1px 1px 1px rgba(0,0,0,0.23);
@@ -221,7 +222,7 @@ header{
                       width: 220px;
                       .top-text {
                           font-size: 15px;
-                          font-family: 'Lobster', cursive;
+                          font-family: 'Lobster', cursive, sans-serif;
                           color: white;
                           position: absolute;
                           top: -3px;
@@ -236,7 +237,7 @@ header{
                           border-radius: 10px;
                           border: 2px solid rgba(0, 0, 0, 0.05);
                           text-align: center;
-                          font-family: 'Lobster', cursive;
+                          font-family: 'Lobster', cursive, sans-serif;
 
                           .coin-img  {
                               position: absolute;
@@ -249,7 +250,7 @@ header{
                           }
                           .amount-text{
                               color: white;
-                              font-family: 'Lobster', cursive;
+                              font-family: 'Lobster', cursive, sans-serif;
                               font-size: 35px;
                               padding-left: 75px;
                               line-height: 1.25;
